--- a/package.json
+++ b/package.json
@@ -3,14 +3,23 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "webpack --config webpack.prod.ts",
-    "dev": "webpack --config webpack.dev.ts --watch"
+    "dev": "webpack --config webpack.dev.ts --watch",
+    "lint": "eslint \"src/**/*.ts\""
   },
   "devDependencies": {
     "@types/node": "^18.16.0",
     "@types/webpack": "^5.28.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "clean-webpack-plugin": "^4.0.0",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-webpack-plugin": "^4.0.1",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
     "nodemon-webpack-plugin": "^4.8.1",
+    "prettier": "^2.8.8",
+    "prettier-eslint": "^15.0.1",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
