--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node"
-  }
+  },
+  "include": ["src/**/*", ".eslintrc.js", "webpack.dev.ts", "webpack.prod.ts"],
+  "exclude": ["node_modules"]
 }
