--- a/package.json
+++ b/package.json
@@ -2,27 +2,29 @@
   "name": "typescript-webpack",
   "license": "UNLICENSED",
   "scripts": {
+    "start": "node dist/bundle.js",
     "build": "webpack --config webpack.prod.ts",
     "dev": "webpack --config webpack.dev.ts --watch",
     "lint": "eslint \"src/**/*.ts\""
   },
   "devDependencies": {
-    "@types/node": "^18.16.0",
+    "@types/node": "^20.9.0",
     "@types/webpack": "^5.28.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "clean-webpack-plugin": "^4.0.0",
     "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-webpack-plugin": "^4.0.1",
-    "fork-ts-checker-webpack-plugin": "^8.0.0",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "nodemon-webpack-plugin": "^4.8.1",
-    "prettier": "^2.8.8",
-    "prettier-eslint": "^15.0.1",
+    "prettier": "^3.1.0",
+    "prettier-eslint": "^16.1.2",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
+    "webpack": "~5.89.0",
     "webpack-cli": "^5.0.2",
     "webpack-merge": "^5.8.0"
   }
